Refractor: Homework 6.  Added common css class + fixed z-index.

--- a/Lesson 6/Homework 6/styles.css
+++ b/Lesson 6/Homework 6/styles.css
@@ -42,7 +42,7 @@ li {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 1;
 }
 
 .navigation {
@@ -99,21 +99,19 @@ li {
   justify-content: center;
 }
 
-.available {
+.car-status {
   position: absolute;
   top: 10px;
   right: 10px;
   font-size: 20px;
   font-weight: bold;
+}
+
+.available {
   color: #008000;
 }
 
 .order {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 20px;
-  font-weight: bold;
   color: #ff0000;
 }
 
